# ship-note-web

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  wrangler.toml
.github/workflows/: ci.yml  release.yml
benchmark/: SUMMARY.md  SUMMARY_V2.md  results.json  results_v2.json  run-benchmark-v2.mjs  run-benchmark.mjs  samples.json  samples_v2.json
docs/: AGENT_INTEGRATION.md  AGENT_RECIPES.md  API.md  CLI.md  OPERATIONS.md
docs/devlogs/: 2026-02-26-mvp-v2-benchmark.md  2026-02-27-v0.1.4-to-v0.1.7-quality-block.md
docs/dogfood/: QUALITY_SCORING.md
docs/dogfood/latest/: QUALITY_REPORT.json  QUALITY_REPORT.md  REVIEW_NOTES.md  SUMMARY.md  TUNING_TODO.md  repo-preflight-range.internal.standard.with-why.json  repo-preflight-range.internal.standard.with-why.md  repo-preflight-range.release.standard.json  repo-preflight-range.release.standard.md  ship-note-range.social.short.json  (+11 more)
docs/fixtures/: index.json  schema.v1.internal.standard.with-why.json  schema.v1.release.standard.json  schema.v1.social.short.json  ship-note.schema.v1.json
docs/snippets/: curl.sh  python.py
functions/api/: generate.js
public/: index.html
scripts/: cleanup-deployments.sh  deploy-preview.sh  dogfood-destinations.mjs  generate-snippets.mjs  plan-dogfood-tuning.mjs  review-dogfood-quality.mjs
src/ship_note_web/: api.py  cli.py
src/web/: generate.js
tests/: dogfood.snapshots.test.js  fixtures.test.js  snippets.test.js  web.generate.test.js
(+13 files in other folders)
