[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ship-note-web"
version = "0.1.0"
description = "Web UI to generate concise release/devlog drafts from GitHub history"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "TODO" }]
license = { text = "MIT" }

[project.scripts]
ship-note-web = "ship_note_web.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
